--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -52,10 +52,10 @@
 <div id="main" class="table" style="width: 99%; height: 83vh; border: 0px solid #000; top: 20px; position: absolute;">
   <div class="row">
     <div style="text-align: center;background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.05);border-radius: 4px;padding-left: 50px;" >
-      <iframe id="main-display" onload="resizeIframe(this.id)" style=" height: 95vh;width: 100%; border: none; overflow: auto;" src="/home/map_main"></iframe>
+      <iframe id="main-display" onload="resizeIframe(this.id)" style=" height: 1050px;width: 100%; border: none; overflow: auto;" src="/home/map_main"></iframe>
     </div>
     <div class="cell" style="vertical-align: top;width: 65%;">
-      <iframe id="report-display" style="width: 100%;border: none; height: 95vh;overflow: auto;" ></iframe>
+      <iframe id="report-display" style="width: 100%;border: none; height: 1070px;overflow: auto;" ></iframe>
     </div>
   </div>
 </div>
