--- a/app/views/report/notices.html.erb
+++ b/app/views/report/notices.html.erb
@@ -111,7 +111,7 @@
                   Updated By: <span style="font-weight: bold;"><%= User.current.username %></span>
                   <hr>
                   <input type='button' style="float: right;" class="btn btn-success" value="Save changes" onmousedown="saveNewNoticesChanges()" id="save_changes">
-                  <button  class="btn btn-danger" style="float: right;margin-right: 10px;" onmousedown="hideLayer()">Close</button>
+                  <button  class="btn btn-danger" style="float: right;margin-right: 10px;" onmousedown="hideLayer()">Cancel</button>
                 </form>
             </div>
           </div>
