--- a/app/views/report/menu.html.erb
+++ b/app/views/report/menu.html.erb
@@ -53,7 +53,7 @@
                             <td><label id="selection-label" style="font-weight: bold;"></label></td>
                             <td class="td-heading">Select site</td>
                             <%sites = []
-                              Site.all.map do |s|
+                              Site.where(:active => true).map do |s|
                                 sites << [s.name, s.id]
                               end
                             %>
