--- a/app/views/home/map_main.html.erb
+++ b/app/views/home/map_main.html.erb
@@ -187,7 +187,7 @@
         var mw = doc.getElementById("malawi");
 
         var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-
+        id = id.toLowerCase();
         circle.setAttribute("cx", x);
 
         circle.setAttribute("cy", y);
