--- a/app/views/home/map_main.html.erb
+++ b/app/views/home/map_main.html.erb
@@ -351,7 +351,7 @@
          // meter.transition().delay(250).attr("transform", "scale(0)");
          });
        */
-      window.setTimeout("loadSites();", 350)
+      window.setTimeout("loadSites();", 1);
     </script>
   </body>
 </html>
