--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,10 +70,10 @@
         }
       }
 
-      var color = "#ffffff";
+      var color = "white";
       function BlinkIt() {
         if (circle != ''){
-          color = (color == "#ffffff")? "#000000" : "#ffffff";
+          color = (color == "white")? "red" : "white";
           circle.setAttribute("fill", color);
         }
 
