adding new API for ART stock managemnet: 90%

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -102,6 +102,14 @@ img {
       </div>
     </div>
 
+    <div class="introItem" onclick="window.location.href='/stock_report'">
+      <img class="introIcon" src="/images/stock_report.png">
+      <div class="introItemText">
+        <div class="introItemHeader">Site physical stock</div>
+        <div>View summary of drugs that are at a site.</div>
+      </div>
+    </div>
+
   </div>
 
 </div>
