removing Site physical report

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -94,19 +94,19 @@ img {
       </div>
     </div>
 
-    <div class="introItem" onclick="window.location.href='/report/physical_stock_summary'">
+    <!--div class="introItem" onclick="window.location.href='/report/physical_stock_summary'">
       <img class="introIcon" src="/images/aggregate.png">
       <div class="introItemText">
         <div class="introItemHeader">Site physical stock</div>
         <div>View summary of drugs that are at a site.</div>
       </div>
-    </div>
+    </div-->
 
     <div class="introItem" onclick="window.location.href='/stock_report'">
       <img class="introIcon" src="/images/stock_report.png">
       <div class="introItemText">
-        <div class="introItemHeader">Site physical stock</div>
-        <div>View summary of drugs that are at a site.</div>
+        <div class="introItemHeader">Site stock report</div>
+        <div>View stock report of a specific site based on <b>supervision</b> verified count.</div>
       </div>
     </div>
 
